# jira_dumper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
jira_dumper/: jira_export_xml.py  jira_export_xml_attachments.py  jira_fetch_issues.py
